[project]
name = "crystal_cell_visualization"
version = "0.1.0"
description = "A Python project for visualizing crystal cells."
authors = [{ name = "TobiL-commits" }]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "plotly",
    # "pandas",
    # "scipy",
    # "pyvista",
    # "vtk"
]

# [build-system]
# requires = ["setuptools>=61.0", "wheel"]
# build-backend = "setuptools.build_meta"
